core/interpreter/src/test/resources/Interpreter_PP_Classes_TestSuite_External/PP/error/instvars/instvars-13.vpp.entry
new A().Test() -- = Run-Time Error 221: Instance invariant was broken